Fix z-index and add dots nav on carousel

--- a/src/components/HeaderHomeOld/HeaderHomeOld.scss
+++ b/src/components/HeaderHomeOld/HeaderHomeOld.scss
@@ -240,7 +240,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: $z-index-4;
+    z-index: $z-index-max;
     display: none;
 }
 
@@ -250,7 +250,7 @@
 
 .drawer-active__overlay {
     position: fixed;
-    z-index: $z-index-3;
+    z-index: $z-index-behind-max;
     width: 100%;
     height: 100%;
     background: $color-black-secondary;
