--- a/src/styles/variables/z-index.scss
+++ b/src/styles/variables/z-index.scss
@@ -2,3 +2,9 @@ $z-index-1: 1;
 $z-index-2: 2;
 $z-index-3: 3;
 $z-index-4: 4;
+$z-index-5: 5;
+$z-index-max: 9999;
+$z-index-behind-max: -1;
+$z-index-before-max-1: 9998;
+$z-index-before-max-2: 9997;
+$z-index-before-max-3: 9996;
